--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,163 @@
 body {
- padding: 50px;
+ 
+ font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
 
+
+.boxPadre{
+  display: flex;
+  flex-direction:column-reverse;
+  justify-content:center;
+  align-items: center;
+}
+
+nav{
+  margin-top: 20px;
+  width: 100%;
+  display:flex ;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  height: 150px;
+}
+
+.box2{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 400px;
+
+  
+}
+
+form{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 60px;
+}
+
+main{
+  display: flex;
+  justify-content:center;
+  align-items: center;
+  
+}
+
+
+li{
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 600px;
+}
+
+li p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  
+}
+
+.btnBorrar{
+  width: 100px;
+  height: 40px;
+  border-radius: 20px;
+  background-color:  rgb(227, 60, 60);
+  color: white;
+  cursor: pointer;
+  border: none;
+  font-weight: bold;
+  font-size: 12px;
+}
+
+.btnBorrar:hover{
+  background-color:rgb(27, 26, 26);
+  box-shadow: rgba(214, 3, 3, 0.3) 0px 0px 0px 3px;
+}
+
+.boxTarea{
+  width: 250px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  padding-right: 50px;
+  
+}
+
+.tarea p{
+  width: 250px;
+  height: 40px;
+  font-size: 20px;
+  margin: 10px;
+  
+  
+}
+
+.btnAgregar{
+  width: 245px;
+  height: 40px;
+  border-radius: 10px;
+  background-color: rgba(3, 101, 214, 0.838);
+  color: white;
+  font-weight: bold;
+  font-size: 16px;
+  margin: 10px;
+  cursor: pointer;
+  border: none;
+}
+
+.btnAgregar:hover{
+  background-color:rgb(27, 26, 26);
+  box-shadow: rgba(3, 101, 214, 0.838) 0px 0px 0px 3px;
+}
+
+.inputAgregar{
+  border-radius: 10px;
+  height: 35px;
+  width: 240px;
+  box-shadow: rgba(3, 102, 214, 0.3) 0px 0px 0px 3px;
+  border: 2px solid black;
+ 
+}
+
+h1{
+  font-size: 25px;
+}
+
+h4{
+  font-size: 25px;
+}
+ 
+.complete {
+  text-decoration: line-through;
+  cursor: pointer;
+}
+
+@media (max-width: 600px){
+
+
+
+  nav{
+    
+    width:100%;
+    display:flex ;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    height: 280px;
+    margin-bottom: 30px;
+  }
+
+  main{
+    width: 100%;
+   
+  }
+}
